--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,35 @@
     transform: rotate(360deg);
   }
 }
+
+
+code {
+  white-space : pre-wrap !important;
+  word-break: break-word !important;
+  font-size: 1em;
+  font-weight: 600;
+  background-color: #000; 
+  padding: 0.2em 0.4em;
+  border-radius: 0.3em;
+  margin: 0 0.2em;
+  display: inline-block;
+}
+
+/* LoadingSpinner.css */
+.loading-spinner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.spinner-icon {
+  width: 50px; /* Adjust size as needed */
+  height: 50px; /* Adjust size as needed */
+  animation: spin 3s linear infinite; /* Increase the duration to 3 seconds */
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
